--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="container">
 			<h2 class="main__service__title">Наши направления</h2>
 			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-			<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
+			<h4 class="main__service__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis dolor, doloremque ab error autem cum. Rerum, sapiente, deserunt.</h4>
 
 			<!-- Service Section -->
 
@@ -125,7 +125,7 @@
 			<div class="container">
 				<h2 class="main__service__title">Галерея</h2>
 				<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-				<h4 class="main__service__subtitle">Some of the projects we have done since it was founded.</h4>
+				<h4 class="main__service__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, veritatis, officiis.</h4>
 
 				<!-- Jquery Menu -->
 				<!-- <ul class="gallery__menu">
@@ -189,55 +189,67 @@
 		<div class="container">
 			<h2 class="main__service__title">Руководитель проекта</h2>
 			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-			<img src="./img/about/vladimir.jpg" alt="Vladimir" class="main__about__img">
-			<p class="main__about__text">Владимир Гуревич</p>
-			<ul class="about__contacts">
-				<script type="text/javascript" language="javascript">
-			{ coded = "IMlGkOkc.k.TwcmIkuF@TOlkM.uXO"
-			  key = "CKURMimwaZTcFP6I8d53N2jxfHo9S71QbskOtlAeuBLgrhGnvJ0VDWqXz4yEpY"
-			  shift=coded.length
-			  link=""
-			  for (i=0; i<coded.length; i++) {
-			    if (key.indexOf(coded.charAt(i))==-1) {
-			      ltr = coded.charAt(i)
-			      link += (ltr)
-			    }
-			    else {
-			      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-			      link += (key.charAt(ltr))
-						envelope = "<i class='fas fa-envelope'></i>"
-			    }
-			  }
-			document.write("<a href='mailto:"+link+"'>"+envelope+"</a>")
-			}
-			</script><noscript><i class="fab fa-js"></i></noscript>
-			<script type="text/javascript" language="javascript">
-			{ coded = "+1 fEL Z1L-ZE-DD"
-			  key = "UVEmbzsKtGALOYkanXHN7xhy09PjCuiIrMog15q3cfvpe8BJ2wd4TWQZR6FSlD"
-			  shift=coded.length
-			  link=""
-			  for (i=0; i<coded.length; i++) {
-			    if (key.indexOf(coded.charAt(i))==-1) {
-			      ltr = coded.charAt(i)
-			      link += (ltr)
-			    }
-			    else {
-			      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-			      link += (key.charAt(ltr))
-						phone = "<i class='fas fa-phone-square'></i>"
+			<div class="about__card">
+
+				<div class="about__card__left">
+					<img src="./img/about/vladimir.jpg" alt="Vladimir" class="main__about__img">
+				</div>
 
 
-			    }
-			  }
-			document.write("<a href='tel:"+link+"'>"+phone+"</a>")
-			}
-			</script><noscript><i class="fab fa-js"></i></noscript>
+				<div class="about__card__right">
+					<p class="main__about__text">Владимир Гуревич</p>
+					<!-- UL list -->
+					<ul class="about__contacts">
+						<script type="text/javascript" language="javascript">
+					{ coded = "i6K8.V6NBV6XOO@ploXO.VKl"
+					  key = "LJZTuyf25K7Gvb1qphXOkQWarjcENC9zsmnxeMwF86tI34UoBDVYd0gHilPRSA"
+					  shift=coded.length
+					  link=""
+					  for (i=0; i<coded.length; i++) {
+					    if (key.indexOf(coded.charAt(i))==-1) {
+					      ltr = coded.charAt(i)
+					      link += (ltr)
+					    }
+					    else {
+					      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+					      link += (key.charAt(ltr))
+								envelope = "<i class='fas fa-envelope'></i>&nbsp&nbsp&nbsp"
+								mailDesktop =  "<span class='phoneDesktop'>"+link+"</span>"
+					    }
+					  }
+					document.write("<span class='about_contact__item'><a href='mailto:"+link+"'>"+envelope+mailDesktop+"</a></span>")
+					}
+					</script><noscript><i class="fab fa-js"></i></noscript>
 
+					<script type="text/javascript" language="javascript">
+					{ coded = "+1 fEL Z1L-ZE-DD"
+					  key = "UVEmbzsKtGALOYkanXHN7xhy09PjCuiIrMog15q3cfvpe8BJ2wd4TWQZR6FSlD"
+					  shift=coded.length
+					  link=""
+					  for (i=0; i<coded.length; i++) {
+					    if (key.indexOf(coded.charAt(i))==-1) {
+					      ltr = coded.charAt(i)
+					      link += (ltr)
+					    }
+					    else {
+					      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+					      link += (key.charAt(ltr))
+								phone = "<i class='fas fa-phone-square'></i>&nbsp&nbsp&nbsp"
+								phoneDesktop = "<span class='phoneDesktop'>"+link+"</span>"
+					    }
+					  }
+					document.write("<span class='about_contact__item'><a href='tel:"+link+"'>"+phone+phoneDesktop+"</a></span>")
+					}
+					</script><noscript><i class="fab fa-js"></i></noscript>
 
+						</ul>
+						</div>
+						<!-- end of about card right -->
+				</div>
+				<!-- end of about card -->
 
-
-			</ul>
 		</div>
+		<!-- end of about container -->
 
 	</section>
 	<!-- End of About Section -->
@@ -269,8 +281,8 @@
 				<img src="./img/logo/chr_main.svg" alt="Logo" class="footer__img">
 
 				<div class="footer__social">
-					<a href="#" target="_blank"><li><i class="fab fa-facebook"></i></li></a>
-					<a href="#" target="_blank"><li><i class="fab fa-instagram"></i></li></a>
+					<a href="https://www.facebook.com/churchillshop.ru/" target="_blank"><li><i class="fab fa-facebook"></i></li></a>
+					<a href="https://www.instagram.com/churchillshop.ru/" target="_blank"><li><i class="fab fa-instagram"></i></li></a>
 					<!-- <a href="#"><li><i class="fa fa-flickr"></i></li></a>
 					<a href="#"><li><i class="fa fa-pinterest"></i></li></a> -->
 				</div>
@@ -286,7 +298,7 @@
 		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 		crossorigin="anonymous"></script>
 	<script src="./js/script.js"></script>
-	<script src="http://127.0.0.1:35729/livereload.js?ext=Firefox&amp;extver=20.3.0"></script>
+	<script src="http://127.0.0.1:52673/livereload.js?ext=Firefox&amp;extver=20.3.0"></script>
 
 </body>
 </html>
