--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<ul class="partners__list">
 			<li class="partners__list__item"><a href="https://www.kupivip.ru/brands/churchill_accessories" target="_blank"><img src="./img/logos/1.jpg" alt=""></a></li>
 			<li class="partners__list__item"><a href="https://www.lamoda.ru/b/26333/brand-churchill-accessories/" target="_blank"><img src="./img/logos/2.jpg" alt=""></a></li>
-			<li class="partners__list__item"><a href="#" target="_blank"><img src="./img/logos/3.jpg" alt=""></a></li>
+			<li class="partners__list__item"><a href="http://www.tsvetnoy.com/ru/store/34/kontakty/" target="_blank"><img src="./img/logos/3.jpg" alt=""></a></li>
 			<li class="partners__list__item"><a href="https://www.wildberries.ru/brands/churchill-accessories" target="_blank"><img src="./img/logos/4.jpg" alt=""></a></li>
 
 		</ul>
