--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 		crossorigin="anonymous"></script>
 	<script src="./js/script.js"></script>
-	<script src="http://127.0.0.1:52673/livereload.js?ext=Firefox&amp;extver=20.3.0"></script>
+	<!-- <script src="http://127.0.0.1:52673/livereload.js?ext=Firefox&amp;extver=20.3.0"></script> -->
 
 </body>
 </html>
