--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<ul id="navList" class="header__nav__items">
 					<a href="#header" class="header__nav__item"><li  class="header__nav__link">Главная</li></a>
 					<a href="#main" class="header__nav__item"><li  class="header__nav__link">Направления</li></a>
-					<a href="#gallery" class="header__nav__item"><li class="header__nav__link">Галерея</li></a>
+					<a href="#gallery" class="header__nav__item hide"><li class="header__nav__link">Галерея</li></a>
 					<a href="#about" class="header__nav__item"><li class="header__nav__link">Контакты</li></a>
 					<!-- <li class="header__nav__item"><a href="#main" class="header__nav__link">Контакты</a></li> -->
 				</ul>
