--- a/index.html
+++ b/index.html
@@ -203,18 +203,18 @@
 					<!-- UL list -->
 					<ul class="about__contacts">
 						<script type="text/javascript" language="javascript">
-					showEmail();
-					</script><noscript><i class="fab fa-js"></i></noscript>
+					showEmail( "i6K8.V6NBV6XOO@ploXO.VKl", "LJZTuyf25K7Gvb1qphXOkQWarjcENC9zsmnxeMwF86tI34UoBDVYd0gHilPRSA" );
+					</script><noscript><i class="needJs fab fa-js"></i></noscript>
 
 					<!-- tel -->
 					<script type="text/javascript" language="javascript">
-					showNumber();
-					</script><noscript><i class="fab fa-js"></i></noscript>
+					showNumber( "+1 fEL Z1L-ZE-DD", "UVEmbzsKtGALOYkanXHN7xhy09PjCuiIrMog15q3cfvpe8BJ2wd4TWQZR6FSlD" );
+					</script><noscript><i class="needJs fab fa-js"></i></noscript>
 
 					<!-- whatsapp -->
 					<script type="text/javascript" language="javascript">
-					showWhatsApp();
-					</script><noscript><i class="fab fa-js"></i></noscript>
+					showWhatsApp( "tH3NFtNF3kk", "UondHISu5L2YjA80gEezJ3XhaksiwDqZFOCKp7fPm1bRW4rvt6GVcBl9yQTMNx" );
+					</script><noscript><i class="needJs fab fa-js"></i></noscript>
 
 
 
